<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerFrom">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/PhoneEntryS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="Phone Number"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/btnLocateS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyTextViewSubtitle"/>



    <EditText
        android:id="@+id/AddressEntryS"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/SelectStateS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyTextViewSubtitle"
        />

    <EditText
        android:id="@+id/PincodeEntryS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/pincode"
        android:inputType="number"
        android:maxLength="6"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/SellerDataSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyTextViewSubtitle"
        />

    <Button
        android:id="@+id/btnLocateS"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/locate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/AddressEntryS" />

    <Button
        android:id="@+id/SellerDataSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/SelectDistrictS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_district"
        android:layout_margin="7dp"
        app:layout_constraintBottom_toTopOf="@id/PincodeEntryS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/SelectStateS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/select_state"
        app:layout_constraintBottom_toTopOf="@id/SelectDistrictS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>


    <Button
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/select_category"
        app:layout_constraintBottom_toTopOf="@id/PhoneEntryS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/NameEntryS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_margin="7dp"
        android:singleLine="true"
        android:hint="@string/shop_name"
        app:layout_constraintBottom_toTopOf="@id/category"
        style="@style/MyTextViewSubtitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/NameEntryS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/form"
        android:textColor="@color/textColourBig"
        android:textSize="50sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>