<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layoutS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller_Home"
    android:fitsSystemWindows="true"
    tools:openDrawer="staart"
    >

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view_Seller"
        app:headerLayout="@layout/header_seller"
        app:menu="@menu/main_menu_seller"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/clrBG"
        android:background="@color/clrBG">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Seller_Home"
            android:layout_margin="10dp"
            android:backgroundTint="@color/textColourSmall"
            android:textAlignment="center"
            tools:ignore="ScrollViewSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/clrBG"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="#757575"
                app:navigationIcon="@drawable/ic_menu_white"
                app:title="@string/Go_Corona" />

            <TextView
                android:id="@+id/Shop_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/textColourBig"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.234" />

            <TextView
                android:id="@+id/ShowAdd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="7dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Shop_Name" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button"
                android:textColor="@color/textColourSmall"
                android:layout_margin="7dp"
                android:text="Your Shop is"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CLOSE"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv"
                android:layout_margin="7dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here_to_change_status_of_your_shop"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ShowAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/buttonStyle"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>